--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,9 @@
 
   <nb-layout-column>
 
-    <app-square [value]="'X'"></app-square>
-    
-    
     <app-board></app-board>
+    
+    <router-outlet></router-outlet>
   </nb-layout-column>
 
   <nb-layout-footer fixed>
