--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,12 +1,15 @@
 <h1>Current Player: {{player}}</h1>
 
-<button (click)="newGame()">Start</button>
+<button nbButton outline status="danger" (click)="newGame()">Start a game</button>
 
 <h2 *ngIf="winner">
   Player {{ winner }} won the game!
 </h2>
 
 <main>
-  <app-square
-  *ngFor="let val of squares; let i = index" [value]="val" (click)="makeMove(i)"></app-square>
+  <app-square 
+    *ngFor="let val of squares; let i = index" 
+    [value]="val" 
+    (click)="makeMove(i)">
+  </app-square>
 </main>
